Added startServer execution
git-svn-id: https://svn.java.net/svn/mojarra~svn/branches/MOJARRA_2_2X_ROLLING@13172 761efcf2-d34d-6b61-9145-99dcacc3edf1