@@ -667,18 +667,6 @@ writeDomain('${weblogic.cargo.home}/user_projects/domains/mydomain')
                                 </goals>
                             </execution>
                             <execution>
-                                <id>startServer</id>
-                                <phase>install</phase>
-                                <configuration>
-                                    <script>
-startServer(adminServerName='AdminServer', jvmArgs='${weblogic.cargo.memargs}')
-                                    </script>
-                                </configuration>
-                                <goals>
-                                    <goal>start-server</goal>
-                                </goals>
-                            </execution>
-                            <execution>
                                 <id>deploy</id>
                                 <phase>pre-integration-test</phase>
                                 <goals>
@@ -792,6 +780,50 @@ startServer(adminServerName='AdminServer', jvmArgs='${weblogic.cargo.memargs}')
             <properties>
                 <weblogic.patch.mojarraJarPath>wlserver/modules</weblogic.patch.mojarraJarPath>
                 <weblogic.patch.mojarraJarName>glassfish.jsf_2.0.0.0_2-1-20.jar</weblogic.patch.mojarraJarName>
+            </properties>
+        </profile>
+        <profile>
+            <id>weblogic-start</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.oracle.weblogic</groupId>
+                        <artifactId>wls-maven-plugin</artifactId>
+                        <version>12.1.3.0</version>
+                        <inherited>true</inherited>
+                        <executions>
+                            <execution>
+                                <id>startServer</id>
+                                <phase>install</phase>
+                                <configuration>
+                                    <script>
+startServer(adminServerName='AdminServer', jvmArgs='${weblogic.cargo.memargs}')
+                                    </script>
+                                </configuration>
+                                <goals>
+                                    <goal>start-server</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+            <properties>
+                <weblogic.cargo.home>C:/Wls1214</weblogic.cargo.home>
+                <weblogic.cargo.wlservername>myserver</weblogic.cargo.wlservername>
+                <weblogic.cargo.username>admin</weblogic.cargo.username>
+                <weblogic.cargo.password>adminadmin1</weblogic.cargo.password>
+                <weblogic.cargo.wldomain>${weblogic.cargo.home}/user_projects/domains/mydomain</weblogic.cargo.wldomain>
+                <weblogic.cargo.wlserver>${weblogic.cargo.home}/wlserver</weblogic.cargo.wlserver>
+                <weblogic.cargo.memargs>-Xms512m -Xmx786m -XX:MaxPermSize=786m</weblogic.cargo.memargs>
+                <domainHome>${weblogic.cargo.wldomain}</domainHome>
+                <middlewareHome>${weblogic.cargo.home}</middlewareHome>
+                <weblogicHome>${weblogic.cargo.wlserver}</weblogicHome>
+                <user>${weblogic.cargo.username}</user>
+                <password>${weblogic.cargo.password}</password>
+                <name>${project.build.finalName}</name>
+                <failOnError>false</failOnError>
+                <timeout>60</timeout>
             </properties>
         </profile>
         <profile>
